implemented factory pattern in client class, created new classes for better management